--- a/index.html
+++ b/index.html
@@ -6,7 +6,39 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <a href="./index.html"WebStudio></a>
+             <ul>
+                <li>
+                    <a href="Studio"></a>
+                 </li>
+                <li>
+                    <a href="Portfolio"></a>
+                </li>
+                <li>
+                    <a href="Contacts"></a>
+
+                </li>
+             </ul>
+        <address>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+        </address>
+        </nav>
+
+    </header>
+
+
+    <main>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
+
+    <footer>
+
+    </footer>
 
 </body>
 </html>
