--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html"WebStudio></a>
+            <a href="./index.html">WebStudio></a>
              <ul>
                 <li>
-                    <a href="Studio"></a>
+                    <a href="Studio">Studio</a>
                  </li>
                 <li>
-                    <a href="Portfolio"></a>
+                    <a href="Portfolio">Portfolio</a>
                 </li>
                 <li>
-                    <a href="Contacts"></a>
-
+                    <a href="Contacts">Contacts</a>
                 </li>
              </ul>
         <address>
@@ -26,7 +25,6 @@
             <a href="tel+11 (000) 111-11-11">+11 (000) 111-11-11</a>
         </address>
         </nav>
-
     </header>
 
 
