--- a/index.html
+++ b/index.html
@@ -22,21 +22,71 @@
              </ul>
         <address>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+            <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
         </address>
         </nav>
     </header>
 
 
     <main>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section1>
+            <h1>Effective Solutions
+            for Your Business</h1>
+            <button type="button">Order Servise</button>
+        </section1>
+        <section2>
+            <ul>
+                <li>
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the business
+                    problem to walk away with the perfect and creative solution.</p>
+                </li>
+                <li>
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                </li>
+                <li>
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+            </ul>
+        </section2>
+        <section3>
+              <h2>Our Team</h2>
+              <ul>
+                <li>
+                    <img href="./images/img (1).jpg" alt="Mark Guerrero">
+                    <h4>Mark Guerrero</h4>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img href="./images/img (2).jpg" alt="Tom Ford">
+                    <h4>Tom Ford</h4>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img href="./images/img (3).jpg" alt="Camila Garcia">
+                    <h4>Camila Garcia</h4>
+                    <p> Marketing</p>
+                </li>
+                <li>
+                    <img href="./images/img(4).jpg" alt="Daniel Wilson">
+                    <h4>Daniel Wilson</h4>
+                    <p>UI Designer</p>
+                </li>
+              </ul>
+        </section3>
     </main>
 
     <footer>
-
+             <address>
+                <a href="./index.html"WebStudio>WebStudio</a>
+                <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+             </address>
     </footer>
-
 </body>
 </html>
