--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
              </ul>
         <address>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+            <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
         </address>
         </nav>
     </header>
@@ -59,22 +59,22 @@
               <h2>Our Team</h2>
               <ul>
                 <li>
-                    <img href="./images/img (1).jpg" alt="Mark Guerrero" width="264" height="260">
+                    <img src="./images/img (1).jpg" alt="Mark Guerrero" width="264" height="260">
                     <h4>Mark Guerrero</h4>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img href="./images/img (2).jpg" alt="Tom Ford" width="264" height="260">
+                    <img src="./images/img (2).jpg" alt="Tom Ford" width="264" height="260">
                     <h4>Tom Ford</h4>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img href="./images/img (3).jpg" alt="Camila Garcia" width="264" height="260">
+                    <img src="./images/img (3).jpg" alt="Camila Garcia" width="264" height="260">
                     <h4>Camila Garcia</h4>
                     <p> Marketing</p>
                 </li>
                 <li>
-                    <img href="./images/img(4).jpg" alt="Daniel Wilson" width="264" height="260">
+                    <img src="./images/img(4).jpg" alt="Daniel Wilson" width="264" height="260">
                     <h4>Daniel Wilson</h4>
                     <p>UI Designer</p>
                 </li>
@@ -83,7 +83,7 @@
     </main>
     <footer>
              <address>
-                <a href="./index.html"WebStudio>WebStudio</a>
+                <a href="./index.html" WebStudio>WebStudio</a>
                 <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
              </address>
     </footer>
