--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>goit-markup-hw-01</title>
 </head>
 <body>
     <header>
@@ -20,21 +20,21 @@
                     <a href="#">Contacts</a>
                 </li>
              </ul>
-        <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
-        </address>
         </nav>
+    <address>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+    </address>
     </header>
 
-
     <main>
-        <section1>
+        <section>
             <h1>Effective Solutions
             for Your Business</h1>
             <button type="button">Order Servise</button>
-        </section1>
-        <section2>
+        </section>
+
+        <section>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -54,8 +54,8 @@
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
-        </section2>
-        <section3>
+        </section>
+        <section>
               <h2>Our Team</h2>
               <ul>
                 <li>
@@ -79,11 +79,12 @@
                     <p>UI Designer</p>
                 </li>
               </ul>
-        </section3>
+        </section>
     </main>
+
     <footer>
              <address>
-                <a href="./index.html" WebStudio>WebStudio</a>
+                <a href="#">WebStudio</a>
                 <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
              </address>
     </footer>
