--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
              </ul>
         </nav>
     <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+        <ul>
+            <li>
+               <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+              <a href="tel:+110001111111">+11 (000) 111-11-11</a>"
+            </li>
+        </ul>
     </address>
     </header>
 
@@ -35,6 +41,7 @@
         </section>
 
         <section>
+            <h2>Feature</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -60,22 +67,22 @@
               <ul>
                 <li>
                     <img src="./images/img(1).jpg" alt="Mark Guerrero" width="264" height="260">
-                    <h4>Mark Guerrero</h4>
+                    <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/img(2).jpg" alt="Tom Ford" width="264" height="260">
-                    <h4>Tom Ford</h4>
+                    <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/img(3).jpg" alt="Camila Garcia" width="264" height="260">
-                    <h4>Camila Garcia</h4>
+                    <h3>Camila Garcia</h3>
                     <p> Marketing</p>
                 </li>
                 <li>
                     <img src="./images/img(4).jpg" alt="Daniel Wilson" width="264" height="260">
-                    <h4>Daniel Wilson</h4>
+                    <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
               </ul>
@@ -83,7 +90,7 @@
     </main>
     <footer>
              <address>
-                <a href="#">WebStudio</a>
+                <a href="./index.html">WebStudio</a>
                 <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
              </address>
     </footer>
