--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <section>
             <h1>Effective Solutions
             for Your Business</h1>
-            <button type="button">Order Servise</button>
+            <button type="button">Order Service</button>
         </section>
 
         <section>
@@ -89,10 +89,8 @@
         </section>
     </main>
     <footer>
-             <address>
                 <a href="./index.html">WebStudio</a>
                 <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-             </address>
     </footer>
 </body>
 </html>
