--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>goit-markup-hw-01</title>
+    <title>WebStudio</title>
 </head>
 <body>
     <header>
@@ -37,7 +37,7 @@
         <section>
             <h1>Effective Solutions
             for Your Business</h1>
-            <button type="button">Order Service</button>
+            <button type="button" >Order Service</button>
         </section>
 
         <section>
